tests/ui/parser/use-as-where-use-ends-with-mod-sep.rs
use std::any:: as foo; //~ ERROR expected identifier, found keyword `as`
//~^ ERROR: expected one of `::`, `;`, or `as`, found `foo`
